[metadata]
name = pystruct
version = 0.1
author = Łukasz Rekucki
author_email = lrekucki@gmail.com
description = Easy structure parsing using declarative classes.
home_page = http://ponymagic.ep.io/

classifier = Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License

[files]
packages = pystruct

